--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,12 +1,8 @@
-
-<% provide(:title, "About") %>
-<h1>About</h1>
-<p>
-  The <a href="http://www.railstutorial.org/"><em>Ruby on Rails
-  Tutorial</em></a> is a
-  <a href="http://www.railstutorial.org/book">book</a> and
-  <a href="http://screencasts.railstutorial.org/">screencast series</a>
-  to teach web development with
-  <a href="http://rubyonrails.org/">Ruby on Rails</a>.
-  This is the sample application for the tutorial.
-</p>
+<% provide(:title, t(".title")) %>
+  <h1><%= t('.title')%></h1>
+  <p>
+    <%= t(".link_1", :url_1 => link_to(t(".title_link1"), "http://www.railstutorial.org/")).html_safe%>
+    <%= t(".link_2", :url_2 => link_to(t(".title_link2"), "http://www.railstutorial.org/book")).html_safe%>
+    <%= t(".link_3", :url_3 => link_to(t(".title_link3"), "http://screencasts.railstutorial.org/")).html_safe%>
+    <%= t(".link_4", :url_4 => link_to(t(".title_link4"), "http://rubyonrails.org/")).html_safe%>
+  </p>
