--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,9 +1,6 @@
-<% provide(:title, "Help") %>
-<h1>Help</h1>
+<% provide(:title, t(".title")) %>
+<h1><%= t(".title")%></h1>
 <p>
-  Get help on the Ruby on Rails Tutorial at the
-  <a href="http://www.railstutorial.org/help">Rails Tutorial help section</a>.
-  To get help on this sample app, see the
-  <a href="http://www.railstutorial.org/book"><em>Ruby on Rails Tutorial</em>
-  book</a>.
+  <%= t(".link_1", :url_1 => link_to(t(".title_link1"), "http://www.railstutorial.org/help")).html_safe%>
+  <%= t(".link_2", :url_2 => link_to(t(".title_link2"), "http://www.railstutorial.org/book")).html_safe%>
 </p>
