--- a/app/views/users/_list.html.erb
+++ b/app/views/users/_list.html.erb
@@ -2,7 +2,7 @@
 <ul class="users">
   <% @users.each do |user| %>
     <li>
-      <%= gravatar_for user, size: 50 %>
+      <%= gravatar_for user, size: Settings.gravatar_size_user %>
       <%= link_to user.name, user %>
       <% if current_user.admin? && !current_user?(user) %>
       | <%= link_to t(".delete"), user, method: :delete,
