--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -20,7 +20,7 @@
       <div class="gravatar_edit">
         <%= @user.email%>
         <%= gravatar_for @user %>
-        <a href="http://gravatar.com/emails" target="_blank">change</a>
+        <a href="http://gravatar.com/emails" target="_blank"><%= t ".change_avatar" %></a>
       </div>
     <% end %>
   </div>
