--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,10 +1,10 @@
-<% if @user.errors.any? %>
-  <div class="error_explanation">
+<% if object.errors.any? %>
+  <div id="error_explanation">
     <div class="alert alert-danger">
-      <%= t ".alert_error", error_count: pluralize(@user.errors.size, "error") %>
+      <%= t ".errors_count", count: object.errors.size %>
     </div>
     <ul>
-    <% @user.errors.full_messages.each do |msg| %>
+    <% object.errors.full_messages.each do |msg| %>
       <li><%= msg %></li>
     <% end %>
     </ul>
