--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,11 @@
-<h1><%= t(".title")%></h1>
-<p>
-  <%= t(".link", :url => link_to(t(".title_link"), "http://www.railstutorial.org/")).html_safe%>
-</p>
+<div class="center jumbotron">
+  <h1><%= t(".welcome")%></h1>
+
+  <h2>
+    <%= raw t(".rails_tutorial")%>
+  </h2>
+
+  <%= link_to t(".sign_up"), '#', class: "btn btn-lg btn-primary" %>
+</div>
+
+<%= link_to image_tag("rails.png", alt: t(".rails_logo")), 'http://rubyonrails.org/' %>
