--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,7 +5,7 @@
     <%= raw t(".rails_tutorial")%>
   </h2>
 
-  <%= link_to t(".sign_up"), '#', class: "btn btn-lg btn-primary" %>
+  <%= link_to t(".sign_up"), signup_path, class: "btn btn-lg btn-primary" %>
 </div>
 
 <%= link_to image_tag("rails.png", alt: t(".rails_logo")), 'http://rubyonrails.org/' %>
