--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,10 @@
   <body>
     <%= render "shared/header" %>
     <div class="container">
+      <%= render "shared/flash_messages" %>
       <%= yield %>
       <%= render "shared/footer" %>
+      <%= debug(params) if Rails.env.development? %>
     </div>
   </body>
 </html>
