--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, t(".title")) %>
 <h1><%= t(".title")%></h1>
 <p>
-  <%= t(".link_1", :url_1 => link_to(t(".title_link1"), "http://www.railstutorial.org/help")).html_safe%>
-  <%= t(".link_2", :url_2 => link_to(t(".title_link2"), "http://www.railstutorial.org/book")).html_safe%>
+  <%= raw t(".link_1")%>
+  <%= raw t(".link_2")%>
 </p>
