--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= yield(:title) %> | <%= t(".site_title")%></title>
+    <title><%= yield(:title) %> | <%= t ".site_title" %></title>
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag "application", media: "all",
                                               "data-turbolinks-track": "reload" %>
