--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,8 +1,8 @@
-<% provide(:title, t(".title")) %>
-  <h1><%= t('.title')%></h1>
+<% provide :title, t(".title") %>
+  <h1><%= t ".title" %></h1>
   <p>
-    <%= raw t(".link_1")%>
-    <%= raw t(".link_2")%>
-    <%= raw t(".link_3")%>
-    <%= raw t(".link_4")%>
+    <%= t ".the" %> <%= link_to t(".ror_tut"), "http://www.railstutorial.org/"%> <%= t ".is_a"%>
+    <%= link_to t(".book"), "http://www.railstutorial.org/book" %> <%= t "._and"%>
+    <%= link_to t(".screencast"), "http://screencasts.railstutorial.org/" %> <%= t ".text" %>
+    <%= link_to t(".ror_title"), "http://rubyonrails.org/" %> <%= t ".sample_text" %>
   </p>
