--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
-<% provide(:title, t(".title")) %>
-<h1><%= t(".title")%></h1>
+<% provide :title, t(".title") %>
+<h1><%= t(".title") %></h1>
 <p>
-  <%= raw t(".link")%>
+  <%= t ".text" %> <%= link_to t(".rail_title"), "http://www.railstutorial.org/" %> <%= t ".sample_app" %>
 </p>
