--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-<h1><%= t(".title")%></h1>
+<h1><%= t ".title" %></h1>
 <p>
   <%= t ".text" %> <%= link_to t(".rail_title"), "http://www.railstutorial.org/" %> <%= t ".sample_app" %>
 </p>
