--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -2,13 +2,11 @@
 @import "bootstrap";
 
 /* mixins, variables, etc. */
-
 $gray-medium-light: #eaeaea;
-$light-gray: #777;
-@gray-light: #777;
+$gray-light: #777;
+$white-light: #fff;
 
 /* universal */
-
 body {
   padding-top: 60px;
 }
@@ -29,7 +27,6 @@ textarea {
 }
 
 /* typography */
-
 h1, h2, h3, h4, h5, h6 {
   line-height: 1;
 }
@@ -57,24 +54,22 @@ p {
 
 
 /* header */
-
 #logo {
   float: left;
   margin-right: 10px;
   font-size: 1.7em;
-  color: #fff;
+  color: $white-light;
   text-transform: uppercase;
   letter-spacing: -1px;
   padding-top: 9px;
   font-weight: bold;
   &:hover {
-    color: #fff;
+    color: $white-light;
     text-decoration: none;
   }
 }
 
 /* footer */
-
 footer {
   margin-top: 45px;
   padding-top: 5px;
