--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,11 +1,11 @@
 <div class="center jumbotron">
-  <h1><%= t(".welcome")%></h1>
+  <h1><%= t ".welcome" %></h1>
 
   <h2>
-    <%= raw t(".rails_tutorial")%>
+    <%= t ".text" %> <%= link_to t(".text_title_link"), "http://www.railstutorial.org/" %>
   </h2>
 
-  <%= link_to t(".sign_up"), '#', class: "btn btn-lg btn-primary" %>
+  <%= link_to t(".sign_up"), "#", class: "btn btn-lg btn-primary" %>
 </div>
 
-<%= link_to image_tag("rails.png", alt: t(".rails_logo")), 'http://rubyonrails.org/' %>
+<%= link_to image_tag("rails.png", alt: t(".rails_logo")), "http://rubyonrails.org/" %>
