--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,3 @@
-<% provide(:title, t(".signup")) %>
-<h1><%= t(".signup")%></h1>
-<p><%= t(".text")%></p>
+<% provide :title, t(".signup") %>
+<h1><%= t ".signup" %></h1>
+<p><%= t ".text" %></p>
